# primes

./: Cargo.toml  LICENSE  README.md  nums.txt  script.sh
src/: lib.rs  main.rs  parser.rs
src/generators/: mod.rs  primes.rs
src/operations/: gcd.rs  mod.rs  pow.rs  utils.rs
src/primality/: fermat.rs  lucas_lehmer.rs  miller_rabin.rs  mod.rs  standard.rs
