[package]
name = "primes"
version = "0.1.0"
edition = "2021"
authors = ["Shashank P <shashankp2832@gmail.com>"]
description = "Package for Large Prime Number Analysis"
license-file = "LICENSE"
documentation = "https://github.com/shashankp28/primes/blob/main/README.md"
readme = "README.md"
repository = "https://github.com/shashankp28/primes/"
keywords = [
    "primes",
    "prime-numbers",
    "prime-number-analysis",
    "prime-number-generation",
    "large-prime-numbers",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = false
panic = 'unwind'
incremental = false
codegen-units = 16
rpath = false

[dependencies]
num-bigint = "0.4.4"
num-traits = "0.2.17"
log = { version = "0.4", features = ["release_max_level_off"] }
clap = { version = "4.4.2", features = ["derive"] }
